force-app/main/default/objects/InvoiceDocumentTypeMap__mdt/InvoiceDocumentTypeMap__mdt.object-meta.xml
<CustomObject>
    <label>請求書タイプマップ</label>
</CustomObject>