force-app/main/default/objects/InvoiceDocumentTypeMap__mdt/fields/AccountingDetailItem__c.field-meta.xml
<CustomField>
    <fullName>AccountingDetailItem__c</fullName>
    <label>請求・支払明細の項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>