force-app/main/default/objects/InvoiceDocumentTypeMap__mdt/fields/InvoiceDocumentType__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDocumentType__c</fullName>
    <label>請求書タイプ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>