force-app/main/default/objects/InvoiceDocumentTypeMap__mdt/fields/TargetDepartment__c.field-meta.xml
<CustomField>
    <fullName>TargetDepartment__c</fullName>
    <label>請求・支払明細の対象課</label>
    <length>255</length>
    <type>Text</type>
</CustomField>