force-app/main/default/objects/InvoiceDocumentTypeMap__mdt/listViews/InvoiceDocumentTypeMapListView.listView-meta.xml
<ListView>
    <fullName>InvoiceDocumentTypeMapListView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TargetDepartment__c</columns>
    <columns>AccountingDetailItem__c</columns>
    <columns>InvoiceDocumentType__c</columns>
    <filterScope>Everything</filterScope>
    <label>請求書タイプマップ</label>
    <language>ja</language>
</ListView>